# plantera

./: .gitignore  LICENSE  README.md  pyproject.toml  test.db
.github/workflows/: ci.yml
plantera/: db.py  main.py  service.py
tests/: conftest.py  test_cli.py  test_service.py
