[project]
name = "plantera"
version = "0.1.0"
description = "A plant maintenance helper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "humanize>=4.15.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[project.scripts]
plantera = "plantera.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
