[project]
name = "plantera"
version = "0.1.3"
description = "A plant maintenance helper"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Thomas Mannell", email = "tom@mannell.ca" }
]
license = { text = "GPL-3.0-or-later" }

dependencies = [
    "humanize>=4.15.0",
    "plyer>=2.1.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/tmannell/plantera"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[project.scripts]
plantera = "plantera.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
